--- a/public/style/style.css
+++ b/public/style/style.css
@@ -5,6 +5,10 @@ p {
 	box-sizing: border-box;
 }
 
+body {
+	background-color: rgb(13, 104, 40);
+}
+
 a {
 	color: inherit;
 	text-decoration: none;
@@ -112,8 +116,14 @@ nav {
 		display: none;
 	}
 
+	.nav-container {
+		width: 20%;
+	}
+
 	.body {
 		display: flex;
+		width: 80%;
+		margin: auto;
 	}
 
 	/***************************************** CONNEXION *************************************/
@@ -137,5 +147,6 @@ nav {
 		width: 250px;
 	}
 
+	/**************************************************** HOME *********************************************/
 
 }
