--- a/public/style/style.css
+++ b/public/style/style.css
@@ -601,6 +601,21 @@ img {
 		padding: 25px;
 	}
 
+	#numberMessage {
+		position: relative;
+	}
+
+	.numberNewMessage {
+		position: absolute;
+		color: rgb(255, 255, 255);
+		font-size: 12px;
+		background: rgb(243, 94, 65);
+		padding: 2px 6px;
+		border-radius: 50%;
+		left: 7px;
+		top: -10px;
+		z-index: 1;
+	}
 
 	.comment {
 		width: 600px;
